--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "huleos.css": "0.1.0",
+    "huleos.css": "^0.1.1",
     "vue": "^2.5.17"
   },
   "devDependencies": {
