Prerender was added

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "huleos.css": "^0.1.1",
+    "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
